[package]
name = "peek"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kubectl-peek"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
kube = "0.97.0"
tower = "0.5.1"
tracing = "0.1.41"
k8s-openapi = { version = "0.23.0", features = ["v1_30"], optional = false }
tokio = { version = "1.40.0", features = ["full"], optional = false }
tracing-subscriber = "0.3.19"
thiserror = "2.0.3"
serde_yaml = "0.9.34"
prettytable-rs = "0.10.0"
clap_complete = "4.5.38"
base64 = "0.22.1"
serde = "1.0.215"
serde_json = "1.0.133"
